--- a/package.json
+++ b/package.json
@@ -23,13 +23,12 @@
     "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.3",
-    "tesseract.js": "^6.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set PORT=3001 && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "set PORT=3001 && react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch"
@@ -44,7 +43,8 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "not ie 11"
     ],
     "development": [
       "last 1 chrome version",
@@ -58,6 +58,9 @@
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "ajv": "^8.17.1",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
+    "customize-cra": "^1.0.0",
+    "react-app-rewired": "^2.2.1",
     "typescript": "^5.8.3"
   }
 }
