--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "travel",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "/",
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
@@ -11,6 +11,7 @@
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
     "@babel/template": "^7.26.9",
+    "@reduxjs/toolkit": "^2.11.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.3",
@@ -59,6 +61,7 @@
     "@types/react-dom": "^18.2.25",
     "ajv": "^8.17.1",
     "babel-plugin-dynamic-import-node": "^2.3.3",
+    "baseline-browser-mapping": "^2.9.19",
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.2.1",
     "typescript": "^5.8.3"
